--- a/coreDataSample/Base.lproj/Main.storyboard
+++ b/coreDataSample/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="sU8-c6-PDR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MTp-OE-hPd">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--ToDo-->
         <scene sceneID="ltS-nV-PNG">
             <objects>
                 <viewController id="sU8-c6-PDR" customClass="ViewController" customModule="coreDataSample" customModuleProvider="target" sceneMemberID="viewController">
@@ -28,7 +28,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="7El-St-o5y">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="605"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="541"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Fje-Ut-3Br">
@@ -47,6 +47,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="ToDo" id="DOr-Kb-Ctn"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="todoTableView" destination="7El-St-o5y" id="y1P-x2-GYJ"/>
@@ -54,7 +55,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gjP-hZ-Exq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="363.5" y="310.5"/>
+            <point key="canvasLocation" x="1175.5" y="310.5"/>
         </scene>
         <!--To Do View Controller-->
         <scene sceneID="kfH-Tb-1Gx">
@@ -83,7 +84,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LpU-Pn-83I" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="842.5" y="310.5"/>
+            <point key="canvasLocation" x="1654.5" y="310.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="W7e-0x-xx7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MTp-OE-hPd" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3iq-Cf-Uon">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="sU8-c6-PDR" kind="relationship" relationship="rootViewController" id="W3v-QX-qIN"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V8I-PF-Gf4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="363" y="310"/>
         </scene>
     </scenes>
 </document>
